feature: add to queue menu items